<resources>
    <string name="app_name">E-potreba</string>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- bottom navigation strings-->
    <string name="bottom_navigation_list_label">List</string>
    <string name="bottom_navigation_near_label">Near</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="bottom_navigation_profile_label">Profile</string>
    <string name="fragment_list_title">List of Markers</string>
    <string name="fragment_profile_favorite">Favorite</string>
    <string name="fragment_profile_owned">Owned</string>
    <string name="fragment_profile_edit_title">Profle Settings</string>
    <string name="fragment_profile_edit_name">Name</string>
    <string name="fragment_profile_edit_phone">Phone</string>
    <string name="fragment_profile_edit_save_but">Save</string>
    <string name="fragment_profile_edit_cancel_but">Cancel</string>
    <string name="fragment_profile_marker_create_but">Create Marker</string>
    <string name="fragment_profile_marker_sign_out_but">Sign Out</string>
    <string name="fragment_profile_edit_okay_alert">Data successfully changed</string>
    <string name="auth_alert_invalid_code">Wrong code!</string>
    <string name="auth_alert_invalid_request">Invalid request, please try again</string>
    <string name="auth_alert_sms_limit">SMS limit has been reached, try again later!</string>
    <string name="other_alert_invalid_format">Incorrect format!</string>
    <string name="fragment_detal_alert_vote">You\'ve already given your rating!</string>
    <string name="other_address_unidentified">The address is unrecognized</string>
    <string name="activity_sign_in_code_alert">Enter the code!</string>
    <string name="activity_sign_in_title">Sign In</string>
    <string name="activity_sign_in_code">Code from SMS</string>
    <string name="activity_sign_in_next">Continue</string>
    <string name="activity_sign_in_confirm">Confirm</string>
    <string name="activity_sign_in_incorect_code">Incorrect code!</string>
    <string name="fragment_profle_edit_new_var">New Value</string>
    <string name="fragment_profle_edit_new_change">Change</string>
    <string name="fragment_vote_title">Your rating</string>
    <string name="fragment_vote_title_confirm">Send a rating</string>
    <string name="fragment_marker_create_title">Create New Marker</string>
    <string name="fragment_marker_create_marker_title">Title</string>
    <string name="fragment_marker_create_marker_lat">Latitude</string>
    <string name="fragment_marker_create_marker_ln">Longitude</string>
    <string name="fragment_marker_create_marker_about">Description</string>
    <string name="fragment_marker_create_marker_price">Price</string>
    <string name="fragment_marker_create_marker_create">Create</string>
    <string name="activity_profile_create_name">Your Name</string>
    <string name="activity_location_not_title">Location error</string>
    <string name="activity_location_not_message">For the application to work correctly, you need to provide access to determine the current location of the device</string>
    <string name="fragment_marker_create_price_alert">Too much!</string>
    <string name="fragment_marker_create_successful">Successfully created!</string>
    <string name="activity_location_grand">Grant access</string>
    <string name="fragment_marker_create_required">This filed is required!</string>
</resources>
